# libcall

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.json  test.sh  vcpkg-configuration.json  vcpkg.json
include/: conf.hpp.in
include/adapter/: libcall_type.hpp  memory_allocator.hpp  parser.hpp  runner.hpp  type_mapping.hpp  type_registry.hpp
include/logger/: logger.hpp
include/types/: json_type.hpp
include/utils/: time_util.hpp
src/: main.cpp
src/adapter/: memory_allocator.cpp  parser.cpp  runner.cpp  type_mapping.cpp  type_registry.cpp
src/logger/: logger.cpp
src/utils/: time_util.cpp
test_configs/: manifest.json  struct_type.json
test_configs/base_type/: literal_int_call.json  pointer_int_call.json
test_libs/: CMakeLists.txt
test_libs/base_type/: build.sh  integer_lib.cpp  test_call.json
test_libs/base_types/: integer_lib.cpp
test_libs/src/: base_type.cpp  struct_type.cpp
test_libs/struct_types/: custom_lib.cpp
tests/: test_run.cpp
tests/adapter/: test_parser.cpp
tests/types/base/: integer_test.cpp  literal_test.cpp
